# deepxiv_sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  DOCUMENTATION.md  FILES_CREATED.txt  IMPROVEMENTS.md  INSTALL.md  LANGUAGES.md  MANIFEST.in  PACKAGE_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKREF.md  README.md  README.zh.md  README_CN.md  README_HIGHLIGHTS.md  SETUP_GUIDE.md  SKILL_ENHANCEMENT_SUMMARY.md  SKILL_OPTIMIZATION.md  USAGE.md  USAGE.zh.md  pyproject.toml  requirements-full.txt  setup.py  streamlit_app.py  test_package.py
deepxiv/: __init__.py  cli.py  mcp_server.py
deepxiv/agent/: agent.py
deepxiv_sdk/: __init__.py  cli.py  mcp_server.py  reader.py
deepxiv_sdk/agent/: agent.py  graph.py  tools.py
examples/: README.md  example_advanced.py  example_agent.py  example_reader.py  quickstart.py
py1stauthor/: __init__.py  reader.py
py1stauthor/agent/: __init__.py  agent.py  graph.py  prompts.py  state.py  tools.py
tests/: conftest.py  test_cli.py  test_mcp_server.py  test_reader.py
