[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "deepxiv"
version = "0.1.0"
description = "A Python package for arXiv paper access with CLI and MCP server support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Hongjin Qian"},
]
keywords = ["arxiv", "research", "papers", "agent", "llm", "react", "mcp", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
mcp = [
    "mcp[cli]>=1.2.0",
]
agent = [
    "openai>=1.0.0",
    "langgraph>=0.0.20",
    "langchain-core>=0.1.0",
]
all = [
    "requests>=2.31.0",
    "click>=8.0.0",
    "mcp[cli]>=1.2.0",
    "openai>=1.0.0",
    "langgraph>=0.0.20",
    "langchain-core>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
deepxiv = "deepxiv.cli:main"

[project.urls]
Homepage = "https://1stauthor.com/"
Documentation = "https://github.com/qhjqhj00/deepxiv#readme"
Repository = "https://github.com/qhjqhj00/deepxiv"
"Bug Tracker" = "https://github.com/qhjqhj00/deepxiv/issues"
Demo = "https://1stauthor.com/"
"API Documentation" = "https://data.rag.ac.cn/api/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["deepxiv*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
